--- a/styles.css
+++ b/styles.css
@@ -1,41 +1,51 @@
 body {
     text-align: center;
     font-family: Arial, sans-serif;
-    background-image: url(fondowebp.webp);
     background-position: center 1%;
     background-size: cover;
 }
 
 h1{
-    color: aqua;
+    color: black;
 }
+.container{
+    margin: auto;
+    background-color: #fafafa5b;
+    width: 450px;
+    margin-top: 25px;
+    padding: 5px;
+    border-radius: 15px;
+}
+
 
 .tic-tac-toe {
     display: grid;
     grid-template-columns: repeat(3, 100px);
-    grid-gap: 5px;
+    grid-gap: 15px;
     margin: 10px auto;
-    width: 300px;
+    width: 350px;
+    padding-bottom: 15px;
 }
 
 .cell {
     width: 100px;
     height: 100px;
     border: 3px solid black;
+    border-radius: 15px;
     background-color: #ddddddd3;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 24px;
+    font-size: 50px;
     cursor: pointer;
 }
 
 .message {
-    color: rgb(141, 248, 248);
-    background-color: rgba(5, 112, 199, 0.575);
+    color: rgb(0, 0, 0);
     width: 350px;
     font-size: 24px;
     margin: auto;
+    padding: 15px;
 }
 
 .reset-button {
@@ -46,8 +56,11 @@ h1{
     border: none;
     padding: 10px 20px;
     cursor: pointer;
+    margin-bottom: 25px;
 }
 
 .reset-button:hover {
+    font-size: 20px;
     background-color: #45a049;
+    color: black;
 }
